feat: KeyGen should use signatures library (#79)
Signed-off-by: Lazar Petrovic <lpetrovic05@gmail.com>